umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@isisdraw_N2F2.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule_lenient
category: molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidCountsLine
    message: "Invalid counts line at line 3, col 33"
molecule_lenient:
  success: true
  summary:
    sum_formula: F2N2
    atom_count: 4
    bond_count: 3
    property_count: 0
extended_molecule:
  success: false
  error:
    error_type: InvalidCountsLine
    message: "Invalid counts line at line 3, col 33"
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: F2N2
    atom_count: 4
    bond_count: 3
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
